--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<h1>Sample Code pradeep kumar</h1>
+<h1>Sample Code pradeep kumar kandyala</h1>
 <p>Sample project</p>
 </body>
 </html>
